--- a/project/demoProject.ui
+++ b/project/demoProject.ui
@@ -4,63 +4,49 @@
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>926</width>
-    <height>548</height>
+       <x>0</x>
+       <y>0</y>
+       <width>919</width>
+       <height>522</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <property name="styleSheet">
-   <string notr="true">	/*background-color:rgb(220, 220, 220);</string>
-  </property>
-  <widget class="QLabel" name="price">
-   <property name="enabled">
-    <bool>true</bool>
-   </property>
-   <property name="geometry">
-    <rect>
-     <x>800</x>
-     <y>40</y>
-     <width>46</width>
-     <height>24</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>宋体</family>
-     <pointsize>14</pointsize>
-     <weight>50</weight>
-     <italic>false</italic>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>总价</string>
-   </property>
-  </widget>
+     <property name="styleSheet">
+         <string notr="true">/* background-color:rgb(85, 255, 127)</string>
+     </property>
   <widget class="QTextEdit" name="priceArea">
    <property name="geometry">
-    <rect>
-     <x>750</x>
-     <y>240</y>
-     <width>159</width>
-     <height>61</height>
-    </rect>
+       <rect>
+           <x>750</x>
+           <y>360</y>
+           <width>151</width>
+           <height>51</height>
+       </rect>
    </property>
-   <property name="styleSheet">
-    <string notr="true">	border-radius: 10px;  
- 	border: 2px groove white;
-	font: 10pt &quot;宋体&quot;;</string>
-   </property>
+      <property name="styleSheet">
+          <string notr="true">border-radius: 10px;
+              border: 2px groove white;
+              font: 20pt &quot;宋体&quot;;
+          </string>
+      </property>
+      <property name="html">
+          <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+              &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+              p, li { white-space: pre-wrap; }
+              &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'宋体'; font-size:20pt; font-weight:400;
+              font-style:normal;&quot;&gt;
+              &lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px;
+              margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;
+          </string>
+      </property>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>440</x>
-     <y>40</y>
+        <y>30</y>
      <width>291</width>
      <height>481</height>
     </rect>
@@ -131,110 +117,6 @@ QHeaderView::section, QTableCornerButton::section {
 	color:rgba(126,206,244,1);*/
 }</string>
       </property>
-      <row>
-       <property name="text">
-        <string>1</string>
-       </property>
-       <property name="font">
-        <font>
-         <family>宋体</family>
-         <pointsize>11</pointsize>
-        </font>
-       </property>
-      </row>
-      <row>
-       <property name="text">
-        <string>2</string>
-       </property>
-       <property name="font">
-        <font>
-         <family>宋体</family>
-         <pointsize>11</pointsize>
-        </font>
-       </property>
-      </row>
-      <row>
-       <property name="text">
-        <string>3</string>
-       </property>
-       <property name="font">
-        <font>
-         <family>宋体</family>
-         <pointsize>11</pointsize>
-        </font>
-       </property>
-      </row>
-      <row>
-       <property name="text">
-        <string>4</string>
-       </property>
-       <property name="font">
-        <font>
-         <family>宋体</family>
-         <pointsize>11</pointsize>
-        </font>
-       </property>
-      </row>
-      <row>
-       <property name="text">
-        <string>5</string>
-       </property>
-       <property name="font">
-        <font>
-         <family>宋体</family>
-         <pointsize>11</pointsize>
-        </font>
-       </property>
-      </row>
-      <row>
-       <property name="text">
-        <string>6</string>
-       </property>
-       <property name="font">
-        <font>
-         <family>宋体</family>
-         <pointsize>11</pointsize>
-        </font>
-       </property>
-      </row>
-      <row>
-       <property name="text">
-        <string>7</string>
-       </property>
-       <property name="font">
-        <font>
-         <family>宋体</family>
-         <pointsize>11</pointsize>
-        </font>
-       </property>
-      </row>
-      <row>
-       <property name="text">
-        <string>8</string>
-       </property>
-       <property name="font">
-        <font>
-         <family>宋体</family>
-         <pointsize>11</pointsize>
-        </font>
-       </property>
-      </row>
-      <row>
-       <property name="text">
-        <string>9</string>
-       </property>
-       <property name="font">
-        <font>
-         <family>宋体</family>
-         <pointsize>11</pointsize>
-        </font>
-       </property>
-      </row>
-      <row>
-       <property name="text">
-        <string>10</string>
-       </property>
-      </row>
       <column>
        <property name="text">
         <string>种类</string>
@@ -280,12 +162,12 @@ QHeaderView::section, QTableCornerButton::section {
   </widget>
   <widget class="QPushButton" name="priceButton_2">
    <property name="geometry">
-    <rect>
-     <x>770</x>
-     <y>480</y>
-     <width>121</width>
-     <height>41</height>
-    </rect>
+       <rect>
+           <x>760</x>
+           <y>460</y>
+           <width>141</width>
+           <height>41</height>
+       </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">	border-radius: 10px;  
@@ -297,7 +179,7 @@ QHeaderView::section, QTableCornerButton::section {
    </property>
    <property name="icon">
     <iconset>
-     <disabledoff>:/image/Clear-1.png</disabledoff>
+        <disabledoff>:/image/Clear.png</disabledoff>
     </iconset>
    </property>
   </widget>
@@ -305,7 +187,7 @@ QHeaderView::section, QTableCornerButton::section {
    <property name="geometry">
     <rect>
      <x>21</x>
-     <y>41</y>
+        <y>31</y>
      <width>391</width>
      <height>481</height>
     </rect>
@@ -356,18 +238,64 @@ QHeaderView::section, QTableCornerButton::section {
      </spacer>
     </item>
     <item>
-     <widget class="QLabel" name="label">
-      <property name="styleSheet">
-       <string notr="true">	border-radius: 10px;  
- 	border: 2px groove white;</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
+        <widget class="QLabel" name="label">
+            <property name="styleSheet">
+                <string notr="true">border-radius: 10px;
+                    border: 2px groove white;
+                </string>
+            </property>
+            <property name="text">
+                <string/>
+            </property>
+            <property name="alignment">
+                <set>Qt::AlignCenter</set>
+            </property>
+        </widget>
     </item>
    </layout>
   </widget>
+     <widget class="QLabel" name="avatarUrl">
+         <property name="geometry">
+             <rect>
+                 <x>760</x>
+                 <y>80</y>
+                 <width>132</width>
+                 <height>132</height>
+             </rect>
+         </property>
+         <property name="styleSheet">
+             <string notr="true">border-radius: 10px;
+                 border: 2px groove white;
+             </string>
+         </property>
+         <property name="text">
+             <string/>
+         </property>
+         <property name="alignment">
+             <set>Qt::AlignCenter</set>
+         </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+         <property name="geometry">
+             <rect>
+                 <x>760</x>
+                 <y>240</y>
+                 <width>131</width>
+                 <height>41</height>
+             </rect>
+         </property>
+         <property name="styleSheet">
+             <string notr="true">border-radius: 10px;
+                 border: 1px groove white;
+             </string>
+         </property>
+         <property name="text">
+             <string/>
+         </property>
+         <property name="alignment">
+             <set>Qt::AlignCenter</set>
+         </property>
+     </widget>
  </widget>
  <resources>
   <include location="../../../../project/uiProject/image/image1.qrc"/>
