--- a/project/demoProject.ui
+++ b/project/demoProject.ui
@@ -3,45 +3,48 @@
  <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
-   <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>919</width>
-       <height>522</height>
-   </rect>
+      <rect>
+          <x>0</x>
+          <y>0</y>
+          <width>919</width>
+          <height>522</height>
+      </rect>
   </property>
-  <property name="windowTitle">
-   <string>Form</string>
-  </property>
+     <property name="windowTitle">
+         <string>Form</string>
+     </property>
      <property name="styleSheet">
          <string notr="true">/* background-color:rgb(85, 255, 127)</string>
      </property>
-  <widget class="QTextEdit" name="priceArea">
-   <property name="geometry">
-       <rect>
-           <x>750</x>
-           <y>360</y>
-           <width>151</width>
-           <height>51</height>
-       </rect>
-   </property>
-      <property name="styleSheet">
-          <string notr="true">border-radius: 10px;
-              border: 2px groove white;
-              font: 20pt &quot;宋体&quot;;
-          </string>
-      </property>
-      <property name="html">
-          <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-              &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-              p, li { white-space: pre-wrap; }
-              &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'宋体'; font-size:20pt; font-weight:400;
-              font-style:normal;&quot;&gt;
-              &lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px;
-              margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;
-          </string>
-      </property>
-  </widget>
+     <widget class="QTextEdit" name="priceArea">
+         <property name="geometry">
+             <rect>
+                 <x>750</x>
+                 <y>360</y>
+                 <width>151</width>
+                 <height>51</height>
+             </rect>
+         </property>
+         <property name="styleSheet">
+             <string notr="true">border-radius: 10px;
+                 border: 2px groove white;
+                 font: 20pt &quot;宋体&quot;;
+             </string>
+         </property>
+         <property name="readOnly">
+             <bool>true</bool>
+         </property>
+         <property name="html">
+             <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+                 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+                 p, li { white-space: pre-wrap; }
+                 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'宋体'; font-size:20pt; font-weight:400;
+                 font-style:normal;&quot;&gt;
+                 &lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px;
+                 margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;
+             </string>
+         </property>
+     </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
@@ -52,25 +55,48 @@
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
-    <item>
-     <widget class="QLabel" name="classify">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="font">
-       <font>
-        <family>宋体</family>
-        <pointsize>14</pointsize>
-        <weight>50</weight>
-        <italic>false</italic>
-        <bold>false</bold>
-       </font>
-      </property>
-      <property name="text">
-       <string>分类</string>
-      </property>
-     </widget>
-    </item>
+       <item>
+           <layout class="QHBoxLayout" name="horizontalLayout">
+               <item>
+                   <widget class="QLabel" name="classify">
+                       <property name="enabled">
+                           <bool>true</bool>
+                       </property>
+                       <property name="font">
+                           <font>
+                               <family>宋体</family>
+                               <pointsize>14</pointsize>
+                               <weight>50</weight>
+                               <italic>false</italic>
+                               <bold>false</bold>
+                           </font>
+                       </property>
+                       <property name="text">
+                           <string>种类</string>
+                       </property>
+                   </widget>
+               </item>
+               <item>
+                   <widget class="QLabel" name="classify_2">
+                       <property name="enabled">
+                           <bool>true</bool>
+                       </property>
+                       <property name="font">
+                           <font>
+                               <family>宋体</family>
+                               <pointsize>14</pointsize>
+                               <weight>50</weight>
+                               <italic>false</italic>
+                               <bold>false</bold>
+                           </font>
+                       </property>
+                       <property name="text">
+                           <string>价格</string>
+                       </property>
+                   </widget>
+               </item>
+           </layout>
+       </item>
     <item>
      <spacer name="verticalSpacer_2">
       <property name="orientation">
@@ -107,70 +133,35 @@ QtableView::item{
 QHeaderView::section, QTableCornerButton::section {
 	padding: 1px;
 	border:none;
- 	border: 2px groove white;
-	border-radius: 6px;  
- 	border: 2px groove white;
-	/*border-bottom: 1px solid rgb(75, 120, 154);
-	border-right: 1px solid rgb(75, 120, 154);
-	border-bottom: 1px solid gray;
-	background-color:rgba(75, 120, 154, 1);
-	color:rgba(126,206,244,1);*/
-}</string>
+           border: 2px groove white;
+           border-radius: 6px;
+           border: 2px groove white;
+           /*border-bottom: 1px solid rgb(75, 120, 154);
+           border-right: 1px solid rgb(75, 120, 154);
+           border-bottom: 1px solid gray;
+           background-color:rgba(75, 120, 154, 1);
+           color:rgba(126,206,244,1);*/
+           }
+       </string>
       </property>
-      <column>
-       <property name="text">
-        <string>种类</string>
-       </property>
-       <property name="toolTip">
-        <string notr="true"/>
-       </property>
-       <property name="whatsThis">
-        <string notr="true"/>
-       </property>
-       <property name="font">
-        <font>
-         <family>宋体</family>
-         <pointsize>11</pointsize>
-        </font>
-       </property>
-       <property name="icon">
-        <iconset>
-         <normalon>:/image/kind.png</normalon>
-         <disabledoff>:/image/kind.png</disabledoff>
-        </iconset>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>价格</string>
-       </property>
-       <property name="font">
-        <font>
-         <family>宋体</family>
-         <pointsize>11</pointsize>
-        </font>
-       </property>
-       <property name="icon">
-        <iconset>
-         <normalon>:/image/price1.png</normalon>
-        </iconset>
-       </property>
-      </column>
+         <property name="columnCount">
+             <number>0</number>
+         </property>
      </widget>
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="priceButton_2">
-   <property name="geometry">
-       <rect>
-           <x>760</x>
-           <y>460</y>
-           <width>141</width>
-           <height>41</height>
-       </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">	border-radius: 10px;  
+     <widget class="QPushButton" name="identify_but">
+         <property name="geometry">
+             <rect>
+                 <x>760</x>
+                 <y>460</y>
+                 <width>141</width>
+                 <height>41</height>
+             </rect>
+         </property>
+         <property name="styleSheet">
+             <string notr="true">border-radius: 10px;
  	border: 2px groove white;
 	background-color:rgb(229, 229, 229);</string>
    </property>
@@ -179,7 +170,7 @@ QHeaderView::section, QTableCornerButton::section {
    </property>
    <property name="icon">
     <iconset>
-        <disabledoff>:/image/Clear.png</disabledoff>
+        <disabledoff>:/image/identify_ico.png</disabledoff>
     </iconset>
    </property>
   </widget>
@@ -237,21 +228,21 @@ QHeaderView::section, QTableCornerButton::section {
       </property>
      </spacer>
     </item>
-    <item>
-        <widget class="QLabel" name="label">
-            <property name="styleSheet">
-                <string notr="true">border-radius: 10px;
-                    border: 2px groove white;
-                </string>
-            </property>
-            <property name="text">
-                <string/>
-            </property>
-            <property name="alignment">
-                <set>Qt::AlignCenter</set>
-            </property>
-        </widget>
-    </item>
+       <item>
+           <widget class="QLabel" name="label">
+               <property name="styleSheet">
+                   <string notr="true">border-radius: 10px;
+                       border: 2px groove white;
+                   </string>
+               </property>
+               <property name="text">
+                   <string/>
+               </property>
+               <property name="alignment">
+                   <set>Qt::AlignCenter</set>
+               </property>
+           </widget>
+       </item>
    </layout>
   </widget>
      <widget class="QLabel" name="avatarUrl">
