--- a/project/demoProject.ui
+++ b/project/demoProject.ui
@@ -158,9 +158,24 @@ QHeaderView::section, QTableCornerButton::section {
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">border-radius: 10px;
+    <string notr="true">QPushButton{	
+	border-radius: 10px;
  	border: 2px groove white;
-	background-color:rgb(229, 229, 229);</string>
+   background-color:rgb(229, 229, 229);
+}
+
+QPushButton:hover
+{
+    background-color:rgb(255 , 255 , 255);
+}
+
+QPushButton:pressed
+{
+    background-color:rgb(229, 229, 229);
+    padding-left:3px;
+    padding-top:3px;
+
+}</string>
    </property>
    <property name="text">
     <string/>
